freenance/pgadmin/manifest-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service-freenance
  namespace: pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin-freenance
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgadmin-freenance
  namespace: pgadmin
spec:
  serviceName: pgadmin-service-freenance
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pgadmin-freenance
  template:
    metadata:
      labels:
        app: pgadmin-freenance
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        resources:
          limits:
            cpu: "1"
            memory: "250Mi"
          requests:
            cpu: "50m"
            memory: "100Mi"
        ports:
        - containerPort: 80
          name: pgadminport
        volumeMounts:
        - name: pgadmin-config
          mountPath: /pgadmin4/servers.json
          subPath: servers.json
          readOnly: true
        - name: pgadmin-data
          mountPath: /var/lib/pgadmin/
      volumes:
      - name: pgadmin-config
        configMap:
          name: pgadmin-config-freenance
      - name: pgadmin-data
        persistentVolumeClaim:
          claimName: pgadmin-data-freenance
